[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "I101", "I102", "D104"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info", "venv"]
import-order-style = "google"
application-import-names = ["flask_app"]
docstring-convention = "google"
inline-quotes = "double"
multiline-quotes = "double"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
