[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pingdom"
version = "0.1.0"
description = "A Flask-based API for monitoring and managing analytics data"
readme = "README.md"
requires-python = ">= 3.11"
license = {text = "MIT"}
authors = [
    { name = "itapai", email = "pingdom@yuub.net" }
]
keywords = ["flask", "api", "monitoring", "analytics", "temporal"]
dependencies = [
    "Flask[async]==3.0.0",
    "SQLAlchemy==2.0.25",
    "asyncpg==0.29.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.0",
    "marshmallow==3.20.1",
    "flask-apispec==0.11.4",
    "flask-cors==4.0.0",
    "temporalio==1.5.0",
    "httpx==0.26.0",
    "asyncio==3.4.3",
    "waitress==3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black==24.2.0",
    "isort==5.13.2",
    "mypy",
    "flake8==7.0.0",
    "flake8-docstrings==1.7.0",
    "flake8-import-order==0.18.2",
    "flake8-quotes==3.3.2",
    "flake8-pyproject==1.2.3",
    "autoflake==2.3.0"
]

[tool.setuptools]
packages = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "I101", "I102", "D104"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info", "venv"]
import-order-style = "google"
application-import-names = ["pingdom"]
docstring-convention = "google"
inline-quotes = "double"
multiline-quotes = "double"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true
